Fixed anchor overflow issue

--- a/core_app/static/core_app/main.css
+++ b/core_app/static/core_app/main.css
@@ -143,6 +143,14 @@ p, li {
     letter-spacing: 2px;
 }
 
+ol {
+    white-space: pre-wrap; /* CSS3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 .href-a {
     font: 16px Arial, sans-serif !important;
     padding-top: 5px;
